[gd_scene load_steps=14 format=2]

[ext_resource path="res://tscn/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://gd/Main.gd" type="Script" id=2]
[ext_resource path="res://tscn/Enemies.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/2Shield.tscn" type="PackedScene" id=4]
[ext_resource path="res://tscn/PlayerSprite.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 128.864, 8.16341 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 120 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 0, 200 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 120 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 0, 200 )

[sub_resource type="SegmentShape2D" id=6]
b = Vector2( 225, 0 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 113, 37.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 94.75, 93 )

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 32, 220 )

[node name="Enemies" parent="." instance=ExtResource( 3 )]

[node name="Edge" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edge"]
position = Vector2( 111.126, -8.68399 )
shape = SubResource( 7 )

[node name="Timer3" type="Timer" parent="."]

[node name="Timer4" type="Timer" parent="."]

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( 0, 130 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LeftWall"]
visible = false
position = Vector2( 20, -100 )
shape = SubResource( 4 )
disabled = true

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 224, 130 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 0, -10 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RightWall"]
visible = false
position = Vector2( -20, -100 )
shape = SubResource( 5 )
disabled = true

[node name="EnemyCount" type="Label" parent="."]
visible = false
margin_right = 64.0
rect_scale = Vector2( 0.3, 0.3 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shotcount" type="Label" parent="."]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
rect_scale = Vector2( 0.3, 0.3 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, 239 )
points = PoolVector2Array( 0, 0, 224, 0 )
width = 2.0
default_color = Color( 0, 1, 0.0392157, 1 )

[node name="Area2D" type="Area2D" parent="Line2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line2D/Area2D"]
shape = SubResource( 6 )

[node name="Line2D2" type="Line2D" parent="."]
visible = false
position = Vector2( -5, 239 )
points = PoolVector2Array( 0, 0, 240, 0 )
width = 2.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="LivesLabel" type="Label" parent="."]
visible = false
margin_left = 167.0
margin_top = 2.0
margin_right = 207.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="."]
visible = false
margin_left = 93.0
margin_top = 151.0
margin_right = 133.0
margin_bottom = 165.0
text = "Win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Greener" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Greener"]
position = Vector2( 112, 223.5 )
shape = SubResource( 8 )

[node name="Whiter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Whiter"]
position = Vector2( 112, 93 )
shape = SubResource( 9 )

[node name="2Shield" parent="." instance=ExtResource( 4 )]
position = Vector2( 46, 189 )

[node name="2Shield2" parent="." instance=ExtResource( 4 )]
position = Vector2( 91, 189 )

[node name="2Shield3" parent="." instance=ExtResource( 4 )]
position = Vector2( 177, 189 )

[node name="2Shield4" parent="." instance=ExtResource( 4 )]
position = Vector2( 134, 189 )

[node name="PlayerSprite1" parent="." instance=ExtResource( 5 )]
position = Vector2( 27, 246 )

[node name="PlayerSprite2" parent="." instance=ExtResource( 5 )]
position = Vector2( 40, 246 )

[node name="PlayerSprite3" parent="." instance=ExtResource( 5 )]
position = Vector2( 53, 246 )

[connection signal="area_entered" from="LeftWall" to="Enemies" method="_on_LeftWall_area_entered"]
[connection signal="area_entered" from="RightWall" to="Enemies" method="_on_RightWall_area_entered"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]
[connection signal="area_entered" from="Greener" to="." method="_on_Greener_area_entered"]
[connection signal="area_entered" from="Whiter" to="." method="_on_Whiter_area_entered"]

[editable path="Player"]
